--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-  <body style="background-color:powderblue";>
+  <body style="background-color:powderblue">
     <input class="imput" type="text" id="text">
-    <button type="button" onclick="getInputValue();" id="button">
+    <button type="button" id="button">
       alert me!
       </button>
     <script src="script.js"></script>
